# multi-objective-rl-nuclear-fusion-optimization

./: .gitignore  ANALYSIS_AND_RECOMMENDATIONS.md  CHAMBER_VISUALIZATION_SETUP.md  CHANGELOG.md  CLEANUP_PLAN.md  GPU_TRAINING_GUIDE.md  HOW_TO_RUN.md  HOW_TO_RUN_ANIMATION.md  QUICK_START.md  README.md  README_3D_VISUALIZATION.md  RUN_CHAMBER_VISUALIZATION.md  SHAPE_GUARD_IMPACT.md  SURROGATE_MODEL_GUIDE.md  agent.py  animate_shape.py  api_server.py  app.py  index.html  iter_hybrid_shape_guard_env.py  main.py  modal_app.py  modal_run.py  modal_surrogate.py  package-lock.json  pid_agent (1).py  pyproject.toml  run_chamber.sh  sac.py  sac_shape_guard.py  sac_train.py  test_multi_env.py  test_multi_proc.py  test_vertical_guard.py  train.py  visualize_chamber.py  visualize_chamber_live.py  visualize_vertical_3d.py  visualize_vertical_live.py  websocket_server.py
d3rlpy_logs/CQL_20251108210111/: params.json
data/: batch_convert_nc.py  nc2csv.py
demo/: package-lock.json  package.json  pnpm-lock.yaml
demo/app/: layout.tsx  page.tsx
demo/components/: chamber-python.tsx  navigation.tsx  (+6 more)
docs/: CLEANUP_SUMMARY.md  CQL_TRAINING_FIXES.md  EVALUATION_RESULTS.md  ROADMAP.md  STREAMLIT.md  VISUALIZATION.md
eval/: cql_online_eval.py  rand_eval.py  sac_eval.py  surrogate_eval.py
models/: cql_final.d3  surrogate_best.pt
optimization-for-constraints/: shape_guard.py  vertical_guard.py
scripts/: build_dataset.py  launch_visualization.py  test_multi_env.py
src/: __init__.py
tests/: test_surrogate_inference.py
train/: offline_train.py  sac_train.py
vm/: tpu_cluster.yaml
(+48 files in other folders)
