[project]
name = "nuclear"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymtorax>=0.1.1",
    "torax==1.0.3",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0,<2.0.0",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "anyscale[gcp]>=0.26.74",
    "ray>=2.51.1",
    "modal>=1.2.1",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "stable-baselines3>=2.0.0",
    "torch>=2.0.0",
]
